k8s/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: traefik-gateway
  namespace: traefik
  annotations:
    cert-manager.io/issuer: traefik-cert-manager-issuer
spec:
  gatewayClassName: traefik
  listeners:
    - name: api
      port: 8443
      protocol: HTTPS
      hostname: api.boots.localhost
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: api-boots-api-tls
    - name: web
      port: 8443
      protocol: HTTPS
      hostname: app.boots.localhost
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: web-boots-web-tls
    - name: static-boots
      port: 8443
      protocol: HTTPS
      hostname: static.boots.localhost
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: static-boots-static-tls
    
    - name: static-http
      port: 8000
      protocol: HTTP
      hostname: effervescentia.com
      allowedRoutes:
        namespaces:
          from: All
    - name: static-https
      port: 8443
      protocol: HTTPS
      hostname: effervescentia.com
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: boots-static-tls
